--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <name>HelloWorld</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example123.com</url>
+  <url>http://www.example123MaheshEdited.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
