--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,10 @@
   <artifactId>HelloWorld</artifactId>
   <version>1.0-SNAPSHOT</version>
 
+
   <name>HelloWorld</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>http://www.example123.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
